src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-10.snap
---
source: src/lexer.rs
expression: "scan_one(\"123abc!@#\")"
---
Ok(
    [
        Numeric(
            [
                1,
                2,
                3,
            ],
        ),
        Litteral(
            "abc",
        ),
        Bang,
        Litteral(
            "@#",
        ),
    ],
)
