src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-15.snap
---
source: src/lexer.rs
expression: "scan_one(\"0001\")"
---
Ok(
    [
        Numeric(
            [
                0,
                0,
                0,
                1,
            ],
        ),
    ],
)
