src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-16.snap
---
source: src/lexer.rs
expression: "scan_one(\"Hello\\x00World\")"
---
Ok(
    [
        Litteral(
            "Hello\0World",
        ),
    ],
)
