src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-2.snap
---
source: src/lexer.rs
expression: "scan_one(\"   \")"
---
Ok(
    [
        Space,
        Space,
        Space,
    ],
)
