src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-7.snap
---
source: src/lexer.rs
expression: "scan_one(\"!!!\")"
---
Ok(
    [
        Bang,
        Bang,
        Bang,
    ],
)
