src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-8.snap
---
source: src/lexer.rs
expression: "scan_one(\"...\")"
---
Ok(
    [
        Dot,
        Dot,
        Dot,
    ],
)
