src/snapshots/dreamberd_interpreter__lexer__tests__edge_cases-9.snap
---
source: src/lexer.rs
expression: "scan_one(\",,,\")"
---
Ok(
    [
        Comma,
        Comma,
        Comma,
    ],
)
