src/snapshots/dreamberd_interpreter__lexer__tests__literal_tokens-2.snap
---
source: src/lexer.rs
expression: "scan_one(\"world\")"
---
Ok(
    [
        Litteral(
            "world",
        ),
    ],
)
