src/snapshots/dreamberd_interpreter__lexer__tests__literal_tokens.snap
---
source: src/lexer.rs
expression: "scan_one(\"hello\")"
---
Ok(
    [
        Litteral(
            "hello",
        ),
    ],
)
