src/snapshots/dreamberd_interpreter__lexer__tests__numeric_tokens-2.snap
---
source: src/lexer.rs
expression: "scan_one(\"4567\")"
---
Ok(
    [
        Numeric(
            [
                4,
                5,
                6,
                7,
            ],
        ),
    ],
)
